Init secondViewController so it can listen for NSnotifications and update the label when view loads

--- a/Exercise 1-Creating a Custom NSNotification/Base.lproj/Main.storyboard
+++ b/Exercise 1-Creating a Custom NSNotification/Base.lproj/Main.storyboard
@@ -115,6 +115,71 @@
             </objects>
             <point key="canvasLocation" x="-7.2000000000000002" y="777.66116941529242"/>
         </scene>
+        <!--Forth-->
+        <scene sceneID="P0B-fX-MbZ">
+            <objects>
+                <viewController id="m3B-4u-EDx" customClass="ForthViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VXv-t9-Pgo"/>
+                        <viewControllerLayoutGuide type="bottom" id="bHF-I4-gon"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ydX-gH-ppx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rV-fA-waF">
+                                <rect key="frame" x="139" y="56" width="97" height="83"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="Rgw-MX-6is"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CRt-v4-g3K" customClass="ForthView">
+                                <rect key="frame" x="67" y="238" width="240" height="153"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5c-wJ-gbN">
+                                        <rect key="frame" x="99" y="53" width="42" height="92"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="153" id="tPL-Ex-Spu"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="1ni-ri-U4I" appends="YES" id="quG-bo-fJD"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.78625133199999997" green="0.55356937090000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="5rV-fA-waF" firstAttribute="leading" secondItem="ydX-gH-ppx" secondAttribute="leadingMargin" constant="123" id="Jl5-2K-j5l"/>
+                            <constraint firstItem="CRt-v4-g3K" firstAttribute="top" secondItem="5rV-fA-waF" secondAttribute="bottom" constant="99" id="WTI-Ig-ftI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5rV-fA-waF" secondAttribute="trailing" constant="123" id="qGh-bN-EB8"/>
+                            <constraint firstItem="CRt-v4-g3K" firstAttribute="leading" secondItem="ydX-gH-ppx" secondAttribute="leadingMargin" constant="51" id="uyf-e0-SW5"/>
+                            <constraint firstItem="5rV-fA-waF" firstAttribute="top" secondItem="VXv-t9-Pgo" secondAttribute="bottom" constant="36" id="xJi-Pg-1Wc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CRt-v4-g3K" secondAttribute="trailing" constant="52" id="y2y-ds-fre"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Forth" image="first" id="TwI-nv-j4Z"/>
+                    <connections>
+                        <outlet property="redSquare" destination="5rV-fA-waF" id="BGh-xt-ag4"/>
+                        <outlet property="trackPadView" destination="CRt-v4-g3K" id="ave-Bj-lep"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mx1-Ai-ZEg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="1ni-ri-U4I">
+                    <connections>
+                        <action selector="pannGesture:" destination="CRt-v4-g3K" id="wcX-Ay-RqP"/>
+                    </connections>
+                </panGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="-746.39999999999998" y="699.40029985007504"/>
+        </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
@@ -174,6 +239,7 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="97o-w6-kRO" kind="relationship" relationship="viewControllers" id="Ng1-4s-nuU"/>
+                        <segue destination="m3B-4u-EDx" kind="relationship" relationship="viewControllers" id="19J-60-BtO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
